--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Ashley Betablan</title>
+    <title>Portfolio - Ashley Detablan</title>
     <!-- Font Awesome CDN for Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
@@ -340,7 +340,7 @@
 </header>
 <section class="hero">
     <div class="content">
-        <h1>Hello, I'm Ashley Betablan</h1>
+        <h1>Hello, I'm Ashley Detablan</h1>
         <p>BACHELOR OF SCIENCE IN INFORMATION TECHNOLOGY <br>1ST YEAR BLOCK B.</p>
         <div class="buttons">
             <a href="#about"><i class="fas fa-info-circle"></i> Learn More</a>
@@ -352,7 +352,7 @@
 
 <section class="about" id="about">
     <h2><i class="fas fa-user-circle"></i> About Me</h2>
-    <p>I'm Ashley Betablan, an IT student from Veritas College of Irosin. I chose IT because there is still so much I want to learn in this field. Someday, I plan to go abroad to work, live peacefully there, and apply what I will learn from the course I am currently taking.</p>
+    <p>I'm Ashley Detablan, an IT student from Veritas College of Irosin. I chose IT because there is still so much I want to learn in this field. Someday, I plan to go abroad to work, live peacefully there, and apply what I will learn from the course I am currently taking.</p>
 </section>
 
 <section class="activities" id="activities">
@@ -374,7 +374,7 @@
 </section>
 
 <footer>
-    <p>&copy; 2024 Ashley Betablan. All Rights Reserved.</p>
+    <p>&copy; 2024 Ashley Detablan. All Rights Reserved.</p>
 </footer>
 
 </body>
